Update footer to Working Dog Worx LLC 2025

--- a/index.html
+++ b/index.html
@@ -449,9 +449,9 @@
     <footer>
       <div class="container">
         <div class="footer-content">
-          <div>
-            <p>&copy; 2024 PinStay. Made with ❤️ for better browsing.</p>
-          </div>
+                     <div>
+             <p>&copy; 2025 Working Dog Worx LLC. Made with ❤️ for better browsing.</p>
+           </div>
           <div class="footer-links">
             <a href="https://github.com/richieboo/pinstay">GitHub</a>
             <a href="https://github.com/richieboo/pinstay/issues">Support</a>
