update with link to released pinstay on store.

--- a/index.html
+++ b/index.html
@@ -327,7 +327,11 @@
           tabs again!
         </p>
         <div class="hero-buttons fade-in">
-          <a href="#download" class="btn-primary">Install PinStay</a>
+          <a
+            href="https://chromewebstore.google.com/detail/pinstay/hmaopbijmlmcpcjfmpihiofkkjocnbne"
+            class="btn-primary"
+            >Install PinStay</a
+          >
           <a href="#features" class="btn-secondary">Learn More</a>
         </div>
       </div>
@@ -432,7 +436,7 @@
             Available on the Chrome Web Store
           </p>
           <a
-            href="#"
+            href="https://chromewebstore.google.com/detail/pinstay/hmaopbijmlmcpcjfmpihiofkkjocnbne"
             class="btn-primary"
             style="font-size: 1.3rem; padding: 20px 40px"
           >
