--- a/install.html
+++ b/install.html
@@ -93,6 +93,33 @@
       .features li {
         margin-bottom: 8px;
       }
+      .security-notice {
+        background: #e8f5e9;
+        border-left: 4px solid #4caf50;
+        border-radius: 8px;
+        padding: 15px 20px;
+        margin: 20px 0;
+        text-align: left;
+      }
+      .security-notice h4 {
+        color: #2e7d32;
+        margin: 0 0 10px 0;
+        font-size: 16px;
+      }
+      .security-notice p {
+        color: #555;
+        font-size: 14px;
+        margin: 8px 0;
+        line-height: 1.5;
+      }
+      .security-notice a {
+        color: #2e7d32;
+        text-decoration: none;
+        font-weight: 600;
+      }
+      .security-notice a:hover {
+        text-decoration: underline;
+      }
     </style>
   </head>
   <body>
@@ -118,6 +145,21 @@
           <li>🔄 Preserves ports and original URLs when redirecting back</li>
           <li>⚡ Lightweight with minimal performance impact</li>
         </ul>
+      </div>
+
+      <div class="security-notice">
+        <h4>🔐 About Chrome's Security Warning</h4>
+        <p>
+          Chrome may show a "not trusted by Enhanced Safe Browsing" warning. 
+          This is normal for extensions that need to monitor multiple websites 
+          (like PinStay does for your pinned tabs).
+        </p>
+        <p>
+          <strong>PinStay is safe:</strong> We collect zero data, all code is 
+          <a href="https://github.com/richieboo/pinstay" target="_blank">open source</a>, 
+          and everything runs locally in your browser. 
+          <a href="https://github.com/richieboo/pinstay/blob/main/SECURITY.md" target="_blank">Learn more</a>
+        </p>
       </div>
 
       <p>
